--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="https://www.youtube.com/watch?v=XxoTISP_i84">The Valediction (Unheard Demo in C#)</a></li>
         <li><a href="503">503 Error</a></li>
         <li><a href="siteisfrozen">Site is Frozen</a></li>
-        <li><a href="campaign">Presidential Campaign</a></li>
+        <li><a href="campaign.html">Presidential Campaign</a></li>
         
         </div>
         
